--- a/app/src/main/res/drawable/bg_message_tawar.xml
+++ b/app/src/main/res/drawable/bg_message_tawar.xml
@@ -5,7 +5,7 @@
 
     <corners
         android:topRightRadius="16dp"
-        android:bottomLeftRadius="16dp"
+        android:bottomRightRadius="16dp"
         android:topLeftRadius="16dp"/>
 
 </shape>
