--- a/app/src/main/res/drawable/bg_chat_receive.xml
+++ b/app/src/main/res/drawable/bg_chat_receive.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />
+    <solid android:color="@color/colorPrimaryDark" />
 
     <corners
         android:topRightRadius="12dp"
         android:bottomRightRadius="12dp"
         android:topLeftRadius="12dp"/>
+
 </shape>
